--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -1,33 +1,1 @@
-<div class="content" *ngIf="!loading">
-  <div class="header">
-    <input type="text" [(ngModel)]="userSelected" />
-    <button (click)="getUserData()">Buscar</button>
-  </div>
-  <div class="body">
-    <cmp-table *ngIf="!loadingTable" [columns]="tableColumns" [tableData]="tableData"></cmp-table>
-    <img *ngIf="loadingTable" src='../assets/loading-gif.gif' alt="loading..." />
-  </div>
-</div>
-<img *ngIf="loading" src='../assets/loading-gif.gif' alt="loading..." />
-
-
-
-<!-- <table class="table table-bordered">
-
-  <thead>
-      <tr>
-          <th scope="col"></th>
-          <th scope="col">1</th>
-          <th scope="col">2</th>
-
-      </tr>
-  </thead>
-
-  <tbody *ngFor="let user of users">
-      <tr>
-          <td><b>{{user['login']}}</b></td>
-          <td><b>{{user['repos_url']}}</b></td>
-      </tr>
-  </tbody>
-
-</table> -->
+<app-main></app-main>
