--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="content" *ngIf="!loading">
+<div class="content">
   <div class="header">
     <app-search class="searchContainer" (searchUser)="getUserData($event)"></app-search>
     <app-user-info class="userInfoContainer" *ngIf="userData" [userData]="userData"></app-user-info>
@@ -8,5 +8,4 @@
     <img *ngIf="loadingTable" src='../assets/loading-gif.gif' alt="loading..." />
   </div>
 </div>
-<img *ngIf="loading" src='../assets/loading-gif.gif' alt="loading..." />
 
