estilo basico tabla, custom width

--- a/project/src/app/shared/table/table.component.html
+++ b/project/src/app/shared/table/table.component.html
@@ -1,15 +1,20 @@
-<div class="filters">
-    <label *ngFor="let filter of filtersShow"><input type="checkbox" name="filterLanguage" [id]="filter.name" [checked]="filter.selected" [(ngModel)]="filter.selected" (change)="refreshFilters()"> {{filter.name}}</label>
+<div class="table_container">
+  <div class="filters">
+    <label class="filter" *ngFor="let filter of filtersShow">
+      <input type="checkbox" name="filterLanguage" [id]="filter.name" [checked]="filter.selected"
+        [(ngModel)]="filter.selected" (change)="refreshFilters()"> {{filter.name}}
+    </label>
+  </div>
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th *ngFor="let column of columns" [ngStyle]="{'width': column.columnWidth}"> {{column.name}}</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="data.length > 0">
+      <tr *ngFor="let item of data | languageFilter: filtersActive">
+        <td *ngFor="let column of columns">{{item[column.value]}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <td *ngFor="let column of columns"> {{column.name}}</td>
-    </tr>
-  </thead>
-  <tbody *ngIf="data.length > 0">
-    <tr *ngFor="let item of data | languageFilter: filtersActive">
-      <td *ngFor="let column of columns">{{item[column.value]}}</td>
-    </tr>
-  </tbody>
-</table>
