--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -8,4 +8,5 @@
     <img *ngIf="loadingTable" src='../assets/loading-gif.gif' alt="loading..." />
   </div>
 </div>
+<cmp-alert [showAlert]="showAlert" [msg]="errorMsg"></cmp-alert>
 
