some small fixes

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -6,7 +6,7 @@
   <div class="body">
     <cmp-table *ngIf="!loadingTable && tableData.length > 0" [columns]="tableColumns"
       [tableData]="tableData"></cmp-table>
-    <img *ngIf="loadingTable" src='../assets/loading-gif.gif' alt="loading..." />
+    <img *ngIf="loadingTable" src='https://media.tenor.com/wpSo-8CrXqUAAAAi/loading-loading-forever.gif' alt="loading..." />
   </div>
 </div>
 <cmp-alert [showAlert]="showAlert" [msg]="errorMsg"></cmp-alert>
